# CrowSync

./: .crowsyncignore.example  .dockerignore  .env.example  .gitignore  AUDIT.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.tls.yml  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  start-server.ps1  vite.config.ts
.claude/agents/: risograph-ui-auditor.md
.claude/commands/: build-release.md
.github/workflows/: ci.yml  release.yml
packaging/: crowsync-server.spec  server_entry.py
scripts/: run-server.bat  run-server.sh
server/: conftest.py  file_manager.py  main.py  requirements.txt  schema.sql  storage.py  test_lock_groups.py  test_unity.py  unity.py  websocket_manager.py
server/tests/: test_auth.py  test_compare.py  test_file_manager.py  test_project_members.py  test_stats.py  test_storage.py  test_upload.py  test_websocket.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_ops.rs  lib.rs
src/__tests__/: ProjectMembersDialog.test.tsx  StatsDialog.test.tsx  client.test.ts  nativeFs.test.ts  useFiles.test.tsx
src/api/: client.ts  websocket.ts
src/components/: TitleBar.tsx
src/hooks/: useFileWatch.ts  useFiles.ts  useProjects.ts  useSyncStatus.ts  useToast.ts  useWebSocket.ts
src/pages/: SyncPage.tsx
src/test/: setup.ts
src/test/mocks/: handlers.ts
src/types/: index.ts
src/utils/: folderPicker.ts  localPath.ts  nativeFs.ts  scanPatterns.ts  syncState.ts  uploadState.ts
(+22 files in other folders)
