[package]
name = "app"
version = "0.1.0"
description = "CrowSync — file versioning and locking for game dev teams"
authors = ["CrowSync contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
# Native fs + transfer layer for client-side sync
walkdir = "2"
md-5 = "0.10"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "stream", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
